--- a/app/src/main/res/layout/ticker_layout.xml
+++ b/app/src/main/res/layout/ticker_layout.xml
@@ -25,49 +25,30 @@
                 android:layout_weight="1">
                 <TextView
                     android:id = "@+id/tickerOpening"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style = "@style/basic_text"
+                    android:textStyle="normal"
                     android:text = "시가"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/binggrae"/>
+                    android:layout_weight="1"/>
                 <TextView
                     android:id = "@+id/tickerMin"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style = "@style/basic_text"
                     android:text = "저가"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/binggrae" />
+                    android:layout_weight="1" />
                 <TextView
                     android:id = "@+id/tickerUnitsTraded"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style = "@style/basic_text"
                     android:text = "거래량"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/binggrae" />
+                    android:layout_weight="1" />
                 <TextView
                     android:id = "@+id/tickerPrevClosing"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style = "@style/basic_text"
                     android:text = "전일종가"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/binggrae" />
+                    android:layout_weight="1" />
                 <TextView
                     android:id = "@+id/tickerFluctate_24H"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style = "@style/basic_text"
                     android:text = "24시간 변동가"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/binggrae" />
+                    android:layout_weight="1" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -77,58 +58,34 @@
                 android:layout_weight="1" >
                 <TextView
                     android:id = "@+id/tickerClosing"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style = "@style/basic_text"
                     android:text = "종가"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/binggrae" />
+                    android:layout_weight="1" />
                 <TextView
                     android:id = "@+id/tickerMax"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style = "@style/basic_text"
                     android:text = "고가"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/binggrae" />
+                    android:layout_weight="1" />
                 <TextView
                     android:id = "@+id/tickerAcc_trade_value"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style = "@style/basic_text"
                     android:text = "거래금액"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/binggrae" />
+                    android:layout_weight="1" />
                 <TextView
                     android:id = "@+id/tickerUnitsTraded_24H"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style = "@style/basic_text"
                     android:text = "24시간 거래량"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/binggrae" />
+                    android:layout_weight="1" />
                 <TextView
                     android:id = "@+id/tickerFluctateRate_24H"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style = "@style/basic_text"
                     android:text = "24시간 변동률"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/binggrae" />
+                    android:layout_weight="1" />
             </LinearLayout>
         </LinearLayout>
         <TextView
             android:id = "@+id/tickerDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text = "기준"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:fontFamily="@font/binggrae" />
+            style = "@style/basic_text"
+            android:text = "기준" />
     </LinearLayout>
 </LinearLayout>
