--- a/app/src/main/res/layout/web_layout.xml
+++ b/app/src/main/res/layout/web_layout.xml
@@ -11,10 +11,7 @@
         android:layout_weight="1" />
     <Button
         android:id = "@+id/webViewButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/block"
+        style = "@style/basic_button"
         android:layout_marginTop="5dp"
-        android:fontFamily="@font/binggrae"
         android:text = "닫기"/>
 </LinearLayout>
